Bug 735579.  Correctly handle changes to column widths in fixed-layout tables.  r=ehsan